# jsonrpc

./: CHANGELOG.md  Dockerfile  README.md  build.sh  cabal.project  jsonrpc.cabal
.github/workflows/: docker-ci.yml
scripts/: release.sh  test-in-docker.sh
src/: JSONRPC.hs
test/: Main.hs
