cabal-version: 2.2
name: jsonrpc
version: 0.2.0.0
license: MPL-2.0
license-file: LICENSE
copyright: (c) 2026 DPella AB
author: DPella AB
tested-with: ghc ==9.12.2
extra-doc-files:
  README.md
  CHANGELOG.md

maintainer:
  matti@dpella.io,
  lobo@dpella.io

synopsis: JSON-RPC 2.0 types and type classes for Haskell
description:
  A lightweight implementation of the JSON-RPC 2.0 protocol types for Haskell
  with Aeson serialisation.  Provides the core request, response, notification,
  and error types along with type classes for deriving JSON-RPC method dispatch
  via @DerivingVia@.
  .
  Implements the specification at <https://www.jsonrpc.org/specification>.

homepage: https://github.com/DPella/jsonrpc
bug-reports: https://github.com/DPella/jsonrpc/issues
category: Web, Network

source-repository head
  type: git
  location: https://github.com/DPella/jsonrpc.git

library
  default-language:
    Haskell2010

  default-extensions:
    DataKinds
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    PolyKinds
    RankNTypes
    TypeApplications
    TypeFamilies

  hs-source-dirs:
    src

  exposed-modules:
    JSONRPC

  build-depends:
    aeson >=2.1 && <2.3,
    base >=4.18 && <4.22,
    text >=2.0 && <2.2,

test-suite test-jsonrpc
  type: exitcode-stdio-1.0
  default-language:
    Haskell2010

  default-extensions:
    DataKinds
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    PolyKinds
    RankNTypes
    TypeApplications
    TypeFamilies

  hs-source-dirs:
    test

  main-is:
    Main.hs

  build-depends:
    aeson >=2.1 && <2.3,
    base >=4.18 && <4.22,
    hspec >=2.10 && <2.12,
    jsonrpc,
